<resources>
    <string name="app_name">Orca Settings</string>
    <string name="user_interface">Interface</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="menu_main_activity_change_locale">Blank!</string>
    <string name="header_statusbar">Statusbar</string>
    <string name="header_navbar">Navigation Bar</string>
    <string name="toggles_layout">Toggles</string>
    <string name="general_ui">General UI</string>
    <string name="clock">Clock</string>
    <string name="battery">Battery</string>
    <string name="signal">Signal</string>
    <string name="nav_bar">Navigation Bar</string>
    <string name="power_menu">Power Menu</string>
    <string name="led_options">LED</string>
    <string name="spen_options">S Pen Gestures</string>
    <string name="header_system">System</string>
    <string name="sound">Sound</string>
    <string name="lockscreen_options">Lockscreen</string>
    <string name="title_ribbon">Ribbons</string>
    <string name="weather">Weather</string>
    <string name="tools">Tools</string>
    <string name="installer">Installer</string>
    <string name="themes_title">Themes</string>
    <string name="performance_title">Performance Control</string>
    <string name="title_ui">General User Interface</string>
    <string name="title_statusbar_clock">Statusbar Clock</string>
    <string name="title_statusbar_toggles">Statusbar Toggles</string>
    <string name="title_statusbar_battery">Statusbar Battery</string>
    <string name="title_statusbar_signal">Statusbar Signal</string>
    <string name="title_navbar">Navigation Bar</string>
    <string name="title_navring">Navigation Ring</string>
    <string name="title_power_menu">Power Menu</string>
    <string name="title_led">LED Control</string>
    <string name="title_spen">S Pen Gestures</string>
    <string name="title_lockscreens">Lockscreen Options</string>
    <string name="title_lockscreens_targets">Lockscreen Targets</string>
    <string name="title_sound">Sound Settings</string>
    <string name="title_weather">Weather Settings</string>
    <string name="title_performance">Performance Settings</string>
    <string name="title_installer">Installer Settings</string>
    <string name="title_clipboard_share">Share to Clipboard</string>
    <string name="mgerrit_activity_name">mGerrit</string>
    <string name="ribbon_settings_title">Ribbons</string>
    <string name="header_summary_clock">@null</string>
    <string name="header_summary_toggles">@null</string>
    <string name="header_summary_general_ui">@null</string>
    <string name="header_summary_battery">@null</string>
    <string name="header_summary_signal">@null</string>
    <string name="header_summary_navigation_bar">@null</string>
    <string name="header_summary_power_menu">@null</string>
    <string name="header_summary_led">@null</string>
    <string name="header_summary_spen">@null</string>
    <string name="header_summary_sound">@null</string>
    <string name="header_summary_performance">@null</string>
    <string name="header_summary_lockscreens">@null</string>
    <string name="header_summary_weather">@null</string>
    <string name="header_summary_vibrations">@null</string>
    <string name="ribbon_settings_summary">@null</string>
    <string name="header_summary_installer">@null</string>
    <string name="menu_nav_bar_reset">Reset nav bar</string>
    <string name="menu_ribbon_reset">Reset ribbon</string>
    <string name="menu_ribbon_apps">Reset apps</string>
    <string name="menu_ribbon_rearrange">Rearrange ribbon</string>
    <string name="menu_ribbon_hide">Hide apps</string>
    <string name="menu_ribbon_toggles">Setup toggles</string>
    <string name="menu_ribbon_na">Not available</string>
    <string name="menu_ribbon_toggles_error">Toggles are only available for the left and right swipe ribbons.</string>
    <string name="menu_lockscreens_reset">Reset lockscreen wallpaper</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="misc_short">Misc</string>
    <string name="custom_app_icon_successfully">"'s icon set successfully!"</string>
    <string name="text_on">On</string>
    <string name="text_off">Off</string>
    <string name="title_show_power_saver">Power Saver</string>
    <string name="title_show_screenshot">Screenshot</string>
    <string name="title_show_torch_toggle">Torch</string>
    <string name="title_show_airplane_toggle">Airplane mode</string>
    <string name="title_show_navbar_hide">System Bar toggles</string>
    <string name="summary_show_navbar_hide">Enabling this will show toggles to hide the statusbar</string>
    <string name="title_show_volume_state_toggle">Volume states</string>
    <string name="title_show_profiles_toggle">Profiles</string>
    <string name="title_show_expanded_desktop">Expanded desktop</string>
    <string name="summary_show_expanded_desktop">Adds option in power menu to hide status and navigation bar.</string>
    <string name="title_show_reboot_keyguard">Reboot on lockscreen</string>
    <string name="summary_show_reboot_keyguard">Enabling this will show reboot options while on lockscreen</string>
    <string name="spen_left_title">Action on swipe left</string>
    <string name="spen_right_title">Action on swipe right</string>
    <string name="spen_up_title">Action on swipe up</string>
    <string name="spen_down_title">Action on swipe down</string>
    <string name="spen_double_title">Action on double tap</string>
    <string name="spen_long_title">Action on long press</string>
    <string name="spen_enable">Enable S Pen Gestures</string>
    <string name="spen_enable_summary">Set custom actions for S Pen gestures</string>
    <string name="spen_extras_cat">S Pen extras</string>
    <string name="spen_gestures_cat">S Pen Gestures</string>
    <string name="enable_stylus_pointer_title">Enable S Pen pointer</string>
    <string name="enable_stylus_pointer_summary">Enable the mouse icon when using the S Pen</string>
    <string name="persist_options">Persistence</string>
    <string name="persist_enable">Enable Persistence</string>
    <string name="persist_enable_summary">Enable data to persist across installs</string>
    <string name="persist_prop_density">Persist Density</string>
    <string name="persist_prop_density_summary">Persist LCD density</string>
    <string name="persist_file_hosts">Persist Hosts</string>
    <string name="persist_file_hosts_summary">Persist hosts file</string>
    <string name="title_pref_powersaving_pref_mode">Enable power saver</string>
    <string name="summary_pref_powersaving_pref_mode">@null</string>
    <string name="title_pref_powersaving_data_screen_off">Screen off data action</string>
    <string name="summary_pref_powersaving_data_screen_off">What to do with the data when the screen turns off</string>
    <string name="title_pref_powersaving_data_screen_off_delay">Data action delay</string>
    <string name="summary_pref_powersaving_data_screen_off_delay">How long to wait before applying data action?</string>
    <string name="use_custom_app_title">Use custom application</string>
    <string name="use_custom_app_summary">Use custom application instead of the recent applications dialog</string>
    <string name="select_custom_app_title">Select custom application</string>
    <string name="group_applications">Applications</string>
    <string name="bootani_cat">Boot animation</string>
    <string name="navbar_cat">NavBar</string>
    <string name="notification_cat">Notification</string>
    <string name="display_cat">Display</string>
    <string name="recents_cat">Recents</string>
    <string name="tabletUI_cat">Tablet UI</string>
    <string name="status_bar_notif_count_title">Show notification count</string>
    <string name="status_bar_notif_count_summary">Display number of pending notifications in the Statusbar</string>
    <string name="vibrate_notif_expand_title">Vibrate on expand</string>
    <string name="vibrate_notif_expand_summary">Vibrate when expanding notifications (requires UI restart)</string>
    <string name="disable_bootanimation_title">Disable boot animation</string>
    <string name="custom_bootanimation_title">Custom boot animation</string>
    <string name="custom_bootanimation_summary">Select a custom zip from storage to use as your new boot animation</string>
    <string name="install_file_manager_error">No application found to pick the zip file. Please install a file manager.</string>
    <string name="notification_wallpaper_title">Notification background</string>
    <string name="notification_wallpaper_dialog">Background preview</string>
    <string name="notification_wallpaper_pick">New notification background</string>
    <string name="notification_wallpaper_reset">Remove notification background</string>
    <string name="notification_wallpaper_error">No image found</string>
    <string name="notif_wallpaper_alpha_title">Notification background alpha</string>
    <string name="alpha_dialog_title">Set alpha value</string>
    <string name="custom_carrier_label_title">Custom carrier label</string>
    <string name="custom_carrier_label_explain">Please enter a new label. Enter an empty label to revert to stock label.</string>
    <string name="custom_carrier_label_notset">Custom label currently not set</string>
    <string name="ime_switcher_title">Show IME Switcher</string>
    <string name="ime_switcher_summary">In Statusbar while typing</string>
    <string name="wakeup_when_plugged_unplugged_title">Wake up on charger</string>
    <string name="wakeup_when_plugged_unplugged_summary">Wake up device if a charger is plugged in or unplugged</string>
    <string name="system_power_crt_screen_off_title">CRT screen off</string>
    <string name="system_power_crt_screen_off_summary">Screen will animate an Electron Beam when turned off</string>
    <string name="system_power_crt_mode_title">CRT animation mode</string>
    <string name="system_power_crt_mode_dialog_title">Show CRT animation</string>
    <string name="system_power_crt_mode_horizontal">Portrait horizontal</string>
    <string name="system_power_crt_mode_vertical">Portrait vertical</string>
    <string name="system_power_crt_mode_both">Orientation dependent</string>
    <string name="lefty_mode_title">Lefty mode</string>
    <string name="lefty_mode_summary">Swap NavBar location (requires UI restart)</string>
    <string name="rotate_180_title">Allow 180-degree rotation</string>
    <string name="rotate_180_summary">Checking this allows your device to rotate upside down</string>
    <string name="rotate_270_title">Allow 270-degree rotation</string>
    <string name="rotate_270_summary">Checking this allows your device to rotate to the right</string>
    <string name="ram_bar">Recents RAM bar</string>
    <string name="ram_bar_summary">Shows RAM usage in the Recent Apps window</string>
    <string name="tablet_ui">Force Tablet UI</string>
    <string name="tablet_ui_summary">This will switch to Tablet UI (requires reboot)</string>
    <string name="hide_extras">Hide Extras</string>
    <string name="hide_extras_summary">Hide some SystemBar items e.g. the Compatibility Mode button</string>
    <string name="bootanimation_preview">Bootanimation preview</string>
    <string name="apply">Apply</string>
    <string name="clear_custom_bootanimation">Clear custom boot animation</string>
    <string name="set_custom_bootanimation">Set custom...</string>
    <string name="creating_preview">Creating preview...</string>
    <string name="error_reading_zip_file">Error reading zip file</string>
    <string name="error_creating_preview">Error creating preview</string>
    <string name="multipane_ui">Enable Dual Panel</string>
    <string name="interface_navring_settings_title">Navigation Ring</string>
    <string name="interface_navring_settings_summary">@null</string>
    <string name="vibrations">Vibrations</string>
</resources>