<preference-headers xmlns:android="http://schemas.android.com/apk/res/android" >

    <header android:title="@string/user_interface" />

    <header
        android:id="@+id/user_interface"
        android:fragment="com.aokp.romcontrol.fragments.UserInterface"
        android:title="@string/general_ui"
        android:icon="@drawable/ic_bf_settings_general_ui"
        android:summary="@string/header_summary_general_ui" />
        
    <!-- Launcher -->
    <header
        android:id="@+id/launcher_settings"
        android:title="@string/launcher_settings_title"
        android:icon="@drawable/ic_settings_cmlauncher" />        

    <!-- Themes -->
    <header android:id="@+id/themes"
            android:title="@string/themes_title"
            android:icon="@drawable/ic_settings_themes" >
        <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="com.tmobile.themechooser"
                android:targetClass="com.tmobile.themechooser.ThemeChooser" />
    </header>
    
    <header
        android:id="@+id/lockscreen"
        android:fragment="com.aokp.romcontrol.fragments.Lockscreens"
        android:title="@string/lockscreen_options"
        android:icon="@drawable/ic_bf_settings_lockscreen"
        android:summary="@string/header_summary_lockscreens" />

    <header
        android:id="@+id/power_menu"
        android:fragment="com.aokp.romcontrol.fragments.PowerMenu"
        android:title="@string/power_menu"
        android:icon="@drawable/ic_bf_settings_power_menu"
        android:summary="@string/header_summary_power_menu" />

     <header
        android:id="@+id/nav_bar"
        android:fragment="com.aokp.romcontrol.fragments.Navbar"
        android:title="@string/nav_bar"
        android:icon="@drawable/ic_bf_settings_navigation_bar"
        android:summary="@string/header_summary_navigation_bar" />

     <header
        android:id="@+id/nav_ring"
        android:fragment="com.aokp.romcontrol.fragments.NavRingTargets"
        android:icon="@drawable/ic_bf_settings_navigation_ring"
        android:title="@string/interface_navring_settings_title"
        android:summary="@string/interface_navring_settings_summary" />

     <header
        android:id="@+id/ribbon_targets"
        android:fragment="com.aokp.romcontrol.fragments.RibbonTargets"
        android:icon="@drawable/ic_bf_settings_ribbon"
        android:title="@string/ribbon_settings_title"
        android:summary="@string/ribbon_settings_summary" />

    <header
        android:id="@+id/statusbar"
        android:title="@string/header_statusbar" />

    <header
        android:id="@+id/statusbar_toggles"
        android:title="@string/toggles_layout"
        android:fragment="com.aokp.romcontrol.fragments.StatusBarToggles"
        android:icon="@drawable/ic_bf_settings_quick_toggles"
        android:summary="@string/header_summary_toggles" />

    <header
        android:id="@+id/statusbar_battery"
        android:title="@string/battery"
        android:fragment="com.aokp.romcontrol.fragments.StatusBarBattery"
        android:icon="@drawable/ic_bf_settings_battery"
        android:summary="@string/header_summary_battery" />

    <header
        android:id="@+id/statusbar_clock"
        android:fragment="com.aokp.romcontrol.fragments.StatusBarClock"
        android:summary="@string/header_summary_clock"
        android:icon="@drawable/ic_bf_settings_clock"
        android:title="@string/clock" />

    <header
        android:id="@+id/statusbar_signal"
        android:title="@string/signal"
        android:fragment="com.aokp.romcontrol.fragments.StatusBarSignal"
        android:icon="@drawable/ic_bf_settings_signal"
        android:summary="@string/header_summary_signal" />

    <header
        android:id="@+id/system"
        android:title="@string/header_system" />

    <header
        android:id="@+id/led"
        android:fragment="com.aokp.romcontrol.fragments.LEDControl"
        android:title="@string/led_options"
        android:icon="@drawable/ic_bf_settings_led"
        android:summary="@string/header_summary_led" />

    <header
        android:id="@+id/spen"
        android:fragment="com.aokp.romcontrol.fragments.SPenGestures"
        android:title="@string/spen_options"
        android:icon="@drawable/ic_bf_settings_spen"
        android:summary="@string/header_summary_spen" />

    <header
        android:id="@+id/sound"
        android:fragment="com.aokp.romcontrol.fragments.Sound"
        android:title="@string/sound"
        android:icon="@drawable/ic_bf_sound"
        android:summary="@string/header_summary_sound" />

    <header
        android:id="@+id/vibrations"
        android:title="@string/vibrations"
        android:summary="@string/header_summary_vibrations"
        android:icon="@drawable/ic_bf_vibrate"
        android:fragment="com.aokp.romcontrol.fragments.Vibrations" />

    <header
        android:id="@+id/installer"
        android:title="@string/installer"
        android:summary="@string/header_summary_installer"
        android:icon="@drawable/ic_bf_settings_status_extras"
        android:fragment="com.aokp.romcontrol.fragments.Installer" />
        
    <!-- Performance -->
    <header android:id="@+id/performance"
            android:title="@string/performance_title"
            android:icon="@drawable/ic_settings_performance" >
        <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="com.brewcrewfoo.performance"
                android:targetClass="com.brewcrewfoo.performance.activities.MainActivity" />
    </header>        

</preference-headers>
